Fixed an issue with the AppNavigation shifting around in the Game.

--- a/webApp/redesign/src/components/AppNavigation/AppNavigation.module.scss
+++ b/webApp/redesign/src/components/AppNavigation/AppNavigation.module.scss
@@ -1,44 +1,6 @@
 @import "styles/_shared.scss";
 
-$icon-size-small: 24px;
-$icon-size-large: 32px;
-
-.AppNavigation {
-    @include list-item-shadow();
-
-    background-color: $color-white;
-    bottom: $size-600;
-    border-radius: $border-radius-rounded;
-    display: grid;
-    gap: $size-600;
-    grid-template-columns: repeat(4, $icon-size-small);
-    left: 50%;
-    padding: $size-200 $size-500;
-    position: fixed;
-    transform: translateX(-50%);
-
-    @include media-query-medium {
-        gap: $size-700;
-        grid-template-columns: repeat(4, $icon-size-large);
-        padding: $size-300 ($size-500 + $size-100);
-    }
-
-    .AppNavigationIcon {
-        @include svg-icon-color($color-primary-light);
-
-        height: $icon-size-small;
-        width: $icon-size-small;
-
-        @include media-query-medium {
-            height: $icon-size-large;
-            width: $icon-size-large;
-        }
-
-        &.AppNavigationIcon_active {
-            @include svg-icon-color($color-primary);
-        }
-    }
-}
+// Note: The rest of the AppNavigation styles are in global.scss.
 
 .IconButton {
     background-color: transparent;
